Refactor movements filter